# NYCU_LLM_2024

./: LICENSE  README.md
HW1/: .gitignore  atten.ipynb  hw1_1.ipynb  hw1_1_313511068.ipynb  hw1_2.ipynb  hw1_2_313511068.ipynb  main_rnn.py  pyproject.toml  test.csv  train.csv  val.csv
HW1/logs_csv/: lightning_logs_version_10_acc.csv  lightning_logs_version_10_loss.csv  lightning_logs_version_19_acc.csv  lightning_logs_version_19_loss.csv  lightning_logs_version_1_acc.csv  lightning_logs_version_1_loss.csv  lightning_logs_version_2_acc.csv  lightning_logs_version_2_loss.csv  lightning_logs_version_3_acc.csv  lightning_logs_version_3_loss.csv  lightning_logs_version_4_acc.csv  lightning_logs_version_4_loss.csv
HW2/: .gitignore  HW2_1.ipynb  HW2_1_313511068.ipynb  HW2_2.ipynb  RougeScore.py  pyproject.toml
