[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["keithlin724 <keithlin724@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.2"
torch = "^2.5.0"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
rich = "^13.9.2"
tqdm = "^4.66.5"
psutil = "^6.1.0"
lightning = "^2.4.0"
tensorboardx = "^2.6.2.2"
tensorboard = "^2.18.0"
papermill = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
