[tool.poetry]
name = "hw2"
version = "0.1.0"
description = ""
authors = ["keithlin724 <keithlin724@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
rich = "^13.9.4"
pandas = "^2.2.3"
torch = "^2.5.1"
torchmetrics = "^1.5.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
