[tool.poetry]
name = "hw2"
version = "0.1.0"
description = ""
authors = ["keithlin724 <keithlin724@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.9.4"
pandas = "^2.2.3"
torch = "^2.5.1"
torchmetrics = "^1.5.2"
ipykernel = "^6.29.5"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
chromadb = "^0.5.18"
pypdf = "^5.1.0"
langchain-chroma = "^0.1.4"
transformers = {extras = ["torch"], version = "^4.46.2"}
tensorflow = "^2.18.0"
datasets = "^3.1.0"
tf-keras = "^2.18.0"
matplotlib = "^3.9.2"
rouge-score = "^0.1.2"
evaluate = "^0.4.3"
tqdm = "^4.67.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
